# cmake_study

./: CMakeLists.txt  README.md  main.cpp  test.cpp  test.h
